--- a/en/events-promos/room-promo/index.html
+++ b/en/events-promos/room-promo/index.html
@@ -258,9 +258,14 @@
                     <div class="navbar-header">
 
 
-                        <button class="btn btn-primary off-canvas-toggle " type="button" data-pos="right"
+                        <button class="btn btn-primary off-canvas-toggle " style="display: flex; align-items: center;justify-content: center" type="button" data-pos="right"
                                 data-nav="#t3-off-canvas" data-effect="off-canvas-effect-2">
-                            <i class="fa fa-bars"></i>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 7H19" stroke="#ffffff" stroke-linecap="round"/>
+                                <path d="M5 12H19" stroke="#ffffff" stroke-linecap="round"/>
+                                <path d="M5 17H19" stroke="#ffffff" stroke-linecap="round"/>
+                            </svg>
+
                         </button>
 
                         <!-- OFF-CANVAS SIDEBAR -->
@@ -277,25 +282,25 @@
                                     <div class="module-inner">
                                         <div class="module-ct">
                                             <ul class="nav  nav-pills nav-stacked ">
-                                                <li class="item-435 parent"><a href="/en/">Home</a></li>
-                                                <li class="item-589 parent"><a href="/en/rooms">Rooms</a></li>
-                                                <li class="item-590"><a href="/en/services">Services</a></li>
-                                                <li class="item-564"><a href="/en/location">Location</a></li>
-                                                <li class="item-565 active deeper dropdown parent"><a
-                                                    class="dropdown-toggle" href="/en/events-promos"
-                                                    data-toggle="dropdown">Events<b class="caret"></b></a>
+                                                <li class="item-435 current active deeper dropdown parent"><a
+                                                        class="dropdown-toggle" href="/en/" data-toggle="dropdown">Home<b
+                                                        class="caret"></b></a>
                                                     <ul class="dropdown-menu">
-                                                        <li class="item-633 current active"><a
-                                                            href="/en/events-promos/room-promo">Hotel Promo</a></li>
-                                                        <li class="item-631"><a
-                                                            href="/en/events-promos/bel-posto-ristorante">Bel Posto
-                                                            Ristorante</a></li>
-                                                        <li class="item-630"><a href="/en/events-promos/7-beans-cafe">7
-                                                            Beans Cafe</a></li>
-                                                        <li class="item-632"><a href="/en/events-promos/the-rooftop">The
-                                                            RoofTop</a></li>
+                                                        <li class="item-615"><a href="/en/homepage/about-the-hotel">About
+                                                            the Hotel</a></li>
                                                     </ul>
                                                 </li>
+                                                <li class="item-589 parent"><a href="/en/rooms">Rooms</a></li>
+                                                <li class="item-435 current active deeper dropdown parent"><a
+                                                        class="dropdown-toggle" href="/en/" data-toggle="dropdown">Cities<b
+                                                        class="caret"></b></a>
+                                                    <ul class="dropdown-menu">
+                                                        <li class="item-615"><a href="#">Ha Noi</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li class="item-590"><a href="/en/services">Services</a></li>
+                                                <li class="item-564"><a href="/en/location">Location</a></li>
+                                                <li class="item-565 parent"><a href="/en/events-promos">Events</a></li>
                                                 <li class="item-493"><a href="/en/get-in-touch">Get in Touch</a></li>
                                             </ul>
                                         </div>
@@ -316,7 +321,7 @@
                     <div class="t3-navbar navbar-collapse collapse">
                         <div class="t3-megamenu animate elastic" data-duration="400" data-responsive="true">
                             <ul class="nav navbar-nav level0">
-                                <li class="dropdown mega" data-id="435" data-level="1">
+                                <li class="current active dropdown mega" data-id="435" data-level="1">
                                     <a class=" dropdown-toggle" href="/en/" data-target="#" data-toggle="dropdown">Home
                                         <b class="caret"></b></a>
 
@@ -380,6 +385,34 @@
                                         </div>
                                     </div>
                                 </li>
+                                <li class="dropdown mega" data-id="589" data-level="1">
+                                    <a class=" dropdown-toggle" href="/en/rooms" data-target="#" data-toggle="dropdown">Cities
+                                        <b class="caret"></b></a>
+
+                                    <div class="nav-child dropdown-menu mega-dropdown-menu">
+                                        <div class="mega-dropdown-inner">
+                                            <div class="row">
+                                                <div class="col-xs-12 mega-col-nav" data-width="12">
+                                                    <div class="mega-inner">
+                                                        <ul class="mega-nav level1">
+                                                            <li data-id="591" data-level="2">
+                                                                <a class="" href="#"
+                                                                   data-target="#">Hà Nội </a>
+
+                                                            </li>
+                                                            <li data-id="591" data-level="2">
+                                                                <a class="" href="#"
+                                                                   data-target="#">Hồ Chí Minh </a>
+
+                                                            </li>
+
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
                                 <li data-id="590" data-level="1">
                                     <a class="" href="/en/services" data-target="#">Services </a>
 
@@ -388,7 +421,7 @@
                                     <a class="" href="/en/location" data-target="#">Location </a>
 
                                 </li>
-                                <li class="active dropdown mega" data-id="565" data-level="1">
+                                <li class="dropdown mega" data-id="565" data-level="1">
                                     <a class=" dropdown-toggle" href="/en/events-promos" data-target="#"
                                        data-toggle="dropdown">Events <b class="caret"></b></a>
 
@@ -398,7 +431,7 @@
                                                 <div class="col-xs-12 mega-col-nav" data-width="12">
                                                     <div class="mega-inner">
                                                         <ul class="mega-nav level1">
-                                                            <li class="current active" data-id="633" data-level="2">
+                                                            <li data-id="633" data-level="2">
                                                                 <a class="" href="/en/events-promos/room-promo"
                                                                    data-target="#">Hotel Promo </a>
 
