--- a/en/2014-08-20-12-09-31/index.html
+++ b/en/2014-08-20-12-09-31/index.html
@@ -94,161 +94,246 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 
 
 <!-- HEADER -->
-<header id="t3-header" class="wrap t3-header">
-	<div class="container">
-		<div class="row">
+	<header id="t3-header" class="wrap t3-header">
+		<div class="container">
+			<div class="row">
 
-			<!-- LOGO -->
-			<div class="col-xs-8 col-sm-6 col-md-3 logo">
-				<div class="logo-image">
-					<a href="/en" title="IMEREX">
-													<img class="logo-img" src="/en/images/imerex-web-logo-3.png" alt="IMEREX" />
-																		<span>IMEREX</span>
-					</a>
-					<small class="site-slogan">PLAZA HOTEL</small>
+				<!-- LOGO -->
+				<div class="col-xs-8 col-sm-6 col-md-3 logo">
+					<div class="logo-image">
+						<a href="/en" title="IMEREX">
+							<img class="logo-img" src="/en/images/imerex-web-logo-3.png" alt="IMEREX"/>
+							<span>IMEREX</span>
+						</a>
+						<small class="site-slogan">PLAZA HOTEL</small>
+					</div>
 				</div>
-			</div>
-			<!-- //LOGO -->
+				<!-- //LOGO -->
 
-							<div class="head-right">
+				<div class="head-right">
 
 
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header">
 
 
+						<button class="btn btn-primary off-canvas-toggle " style="display: flex; align-items: center;justify-content: center" type="button" data-pos="right"
+								data-nav="#t3-off-canvas" data-effect="off-canvas-effect-2">
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M5 7H19" stroke="#ffffff" stroke-linecap="round"/>
+								<path d="M5 12H19" stroke="#ffffff" stroke-linecap="round"/>
+								<path d="M5 17H19" stroke="#ffffff" stroke-linecap="round"/>
+							</svg>
 
-<button class="btn btn-primary off-canvas-toggle " type="button" data-pos="right" data-nav="#t3-off-canvas" data-effect="off-canvas-effect-2">
-  <i class="fa fa-bars"></i>
-</button>
+						</button>
 
-<!-- OFF-CANVAS SIDEBAR -->
-<div id="t3-off-canvas" class="t3-off-canvas ">
+						<!-- OFF-CANVAS SIDEBAR -->
+						<div id="t3-off-canvas" class="t3-off-canvas ">
 
-  <div class="t3-off-canvas-header">
-    <h2 class="t3-off-canvas-header-title">Sidebar</h2>
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-  </div>
+							<div class="t3-off-canvas-header">
+								<h2 class="t3-off-canvas-header-title">Sidebar</h2>
+								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
+								</button>
+							</div>
 
-  <div class="t3-off-canvas-body">
-    <div class="t3-module module_menu " id="Mod163"><div class="module-inner"><div class="module-ct"><ul class="nav  nav-pills nav-stacked ">
-<li class="item-435 parent"><a href="/en/" >Home</a></li><li class="item-589 parent"><a href="/en/rooms" >Rooms</a></li><li class="item-590"><a href="/en/services" >Services</a></li><li class="item-564"><a href="/en/location" >Location</a></li><li class="item-565 parent"><a href="/en/events-promos" >Events</a></li><li class="item-493"><a href="/en/get-in-touch" >Get in Touch</a></li></ul>
-</div></div></div>
-  </div>
+							<div class="t3-off-canvas-body">
+								<div class="t3-module module_menu " id="Mod163">
+									<div class="module-inner">
+										<div class="module-ct">
+											<ul class="nav  nav-pills nav-stacked ">
+												<li class="item-435 current active deeper dropdown parent"><a
+														class="dropdown-toggle" href="/en/" data-toggle="dropdown">Home<b
+														class="caret"></b></a>
+													<ul class="dropdown-menu">
+														<li class="item-615"><a href="/en/homepage/about-the-hotel">About
+															the Hotel</a></li>
+													</ul>
+												</li>
+												<li class="item-589 parent"><a href="/en/rooms">Rooms</a></li>
+												<li class="item-435 current active deeper dropdown parent"><a
+														class="dropdown-toggle" href="/en/" data-toggle="dropdown">Cities<b
+														class="caret"></b></a>
+													<ul class="dropdown-menu">
+														<li class="item-615"><a href="#">Ha Noi</a></li>
+													</ul>
+												</li>
+												<li class="item-590"><a href="/en/services">Services</a></li>
+												<li class="item-564"><a href="/en/location">Location</a></li>
+												<li class="item-565 parent"><a href="/en/events-promos">Events</a></li>
+												<li class="item-493"><a href="/en/get-in-touch">Get in Touch</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
 
-</div>
-<!-- //OFF-CANVAS SIDEBAR -->
+						</div>
+						<!-- //OFF-CANVAS SIDEBAR -->
 
 					</div>
 				</div>
 
-			<!-- MAIN NAVIGATION -->
-			<nav id="t3-mainnav" class="col-sm-6 col-md-9 pull-right navbar navbar-default t3-mainnav">
+				<!-- MAIN NAVIGATION -->
+				<nav id="t3-mainnav" class="col-sm-6 col-md-9 pull-right navbar navbar-default t3-mainnav">
 
 
 					<div class="t3-navbar navbar-collapse collapse">
-						<div  class="t3-megamenu animate elastic"  data-duration="400" data-responsive="true">
-<ul class="nav navbar-nav level0">
-<li class="dropdown mega" data-id="435" data-level="1">
-<a class=" dropdown-toggle" href="/en/"   data-target="#" data-toggle="dropdown">Home <b class="caret"></b></a>
+						<div class="t3-megamenu animate elastic" data-duration="400" data-responsive="true">
+							<ul class="nav navbar-nav level0">
+								<li class="current active dropdown mega" data-id="435" data-level="1">
+									<a class=" dropdown-toggle" href="/en/" data-target="#" data-toggle="dropdown">Home
+										<b class="caret"></b></a>
 
-<div class="nav-child dropdown-menu mega-dropdown-menu"  ><div class="mega-dropdown-inner">
-<div class="row">
-<div class="col-xs-12 mega-col-nav" data-width="12"><div class="mega-inner">
-<ul class="mega-nav level1">
-<li  data-id="615" data-level="2">
-<a class="" href="/en/homepage/about-the-hotel"   data-target="#">About the Hotel </a>
+									<div class="nav-child dropdown-menu mega-dropdown-menu">
+										<div class="mega-dropdown-inner">
+											<div class="row">
+												<div class="col-xs-12 mega-col-nav" data-width="12">
+													<div class="mega-inner">
+														<ul class="mega-nav level1">
+															<li data-id="615" data-level="2">
+																<a class="" href="/en/homepage/about-the-hotel"
+																   data-target="#">About the Hotel </a>
 
-</li>
-</ul>
-</div></div>
-</div>
-</div></div>
-</li>
-<li class="dropdown mega" data-id="589" data-level="1">
-<a class=" dropdown-toggle" href="/en/rooms"   data-target="#" data-toggle="dropdown">Rooms <b class="caret"></b></a>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="dropdown mega" data-id="589" data-level="1">
+									<a class=" dropdown-toggle" href="/en/rooms" data-target="#" data-toggle="dropdown">Rooms
+										<b class="caret"></b></a>
 
-<div class="nav-child dropdown-menu mega-dropdown-menu"  ><div class="mega-dropdown-inner">
-<div class="row">
-<div class="col-xs-12 mega-col-nav" data-width="12"><div class="mega-inner">
-<ul class="mega-nav level1">
-<li  data-id="591" data-level="2">
-<a class="" href="/en/rooms/standard-room"   data-target="#">Standard Room </a>
+									<div class="nav-child dropdown-menu mega-dropdown-menu">
+										<div class="mega-dropdown-inner">
+											<div class="row">
+												<div class="col-xs-12 mega-col-nav" data-width="12">
+													<div class="mega-inner">
+														<ul class="mega-nav level1">
+															<li data-id="591" data-level="2">
+																<a class="" href="/en/rooms/standard-room"
+																   data-target="#">Standard Room </a>
 
-</li>
-<li  data-id="592" data-level="2">
-<a class="" href="/en/rooms/deluxe-room"   data-target="#">Deluxe Room </a>
+															</li>
+															<li data-id="592" data-level="2">
+																<a class="" href="/en/rooms/deluxe-room"
+																   data-target="#">Deluxe Room </a>
 
-</li>
-<li  data-id="593" data-level="2">
-<a class="" href="/en/rooms/executive-room"   data-target="#">Executive Room </a>
+															</li>
+															<li data-id="593" data-level="2">
+																<a class="" href="/en/rooms/executive-room"
+																   data-target="#">Executive Room </a>
 
-</li>
-<li  data-id="617" data-level="2">
-<a class="" href="/en/rooms/business-suite"   data-target="#">Business Suite </a>
+															</li>
+															<li data-id="617" data-level="2">
+																<a class="" href="/en/rooms/business-suite"
+																   data-target="#">Business Suite </a>
 
-</li>
-<li  data-id="618" data-level="2">
-<a class="" href="/en/rooms/honeymoon-suite"   data-target="#">Honeymoon Suite </a>
+															</li>
+															<li data-id="618" data-level="2">
+																<a class="" href="/en/rooms/honeymoon-suite"
+																   data-target="#">Honeymoon Suite </a>
 
-</li>
-</ul>
-</div></div>
-</div>
-</div></div>
-</li>
-<li  data-id="590" data-level="1">
-<a class="" href="/en/services"   data-target="#">Services </a>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="dropdown mega" data-id="589" data-level="1">
+									<a class=" dropdown-toggle" href="/en/rooms" data-target="#" data-toggle="dropdown">Cities
+										<b class="caret"></b></a>
 
-</li>
-<li  data-id="564" data-level="1">
-<a class="" href="/en/location"   data-target="#">Location </a>
+									<div class="nav-child dropdown-menu mega-dropdown-menu">
+										<div class="mega-dropdown-inner">
+											<div class="row">
+												<div class="col-xs-12 mega-col-nav" data-width="12">
+													<div class="mega-inner">
+														<ul class="mega-nav level1">
+															<li data-id="591" data-level="2">
+																<a class="" href="#"
+																   data-target="#">Hà Nội </a>
 
-</li>
-<li class="dropdown mega" data-id="565" data-level="1">
-<a class=" dropdown-toggle" href="/en/events-promos"   data-target="#" data-toggle="dropdown">Events <b class="caret"></b></a>
+															</li>
+															<li data-id="591" data-level="2">
+																<a class="" href="#"
+																   data-target="#">Hồ Chí Minh </a>
 
-<div class="nav-child dropdown-menu mega-dropdown-menu"  ><div class="mega-dropdown-inner">
-<div class="row">
-<div class="col-xs-12 mega-col-nav" data-width="12"><div class="mega-inner">
-<ul class="mega-nav level1">
-<li  data-id="633" data-level="2">
-<a class="" href="/en/events-promos/room-promo"   data-target="#">Hotel Promo </a>
+															</li>
 
-</li>
-<li  data-id="631" data-level="2">
-<a class="" href="/en/events-promos/bel-posto-ristorante"   data-target="#">Bel Posto Ristorante </a>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li data-id="590" data-level="1">
+									<a class="" href="/en/services" data-target="#">Services </a>
 
-</li>
-<li  data-id="630" data-level="2">
-<a class="" href="/en/events-promos/7-beans-cafe"   data-target="#">7 Beans Cafe </a>
+								</li>
+								<li data-id="564" data-level="1">
+									<a class="" href="/en/location" data-target="#">Location </a>
 
-</li>
-<li  data-id="632" data-level="2">
-<a class="" href="/en/events-promos/the-rooftop"   data-target="#">The RoofTop </a>
+								</li>
+								<li class="dropdown mega" data-id="565" data-level="1">
+									<a class=" dropdown-toggle" href="/en/events-promos" data-target="#"
+									   data-toggle="dropdown">Events <b class="caret"></b></a>
 
-</li>
-</ul>
-</div></div>
-</div>
-</div></div>
-</li>
-<li  data-id="493" data-level="1">
-<a class="" href="/en/get-in-touch"   data-target="#">Get in Touch </a>
+									<div class="nav-child dropdown-menu mega-dropdown-menu">
+										<div class="mega-dropdown-inner">
+											<div class="row">
+												<div class="col-xs-12 mega-col-nav" data-width="12">
+													<div class="mega-inner">
+														<ul class="mega-nav level1">
+															<li data-id="633" data-level="2">
+																<a class="" href="/en/events-promos/room-promo"
+																   data-target="#">Hotel Promo </a>
 
-</li>
-</ul>
-</div>
+															</li>
+															<li data-id="631" data-level="2">
+																<a class=""
+																   href="/en/events-promos/bel-posto-ristorante"
+																   data-target="#">Bel Posto Ristorante </a>
+
+															</li>
+															<li data-id="630" data-level="2">
+																<a class="" href="/en/events-promos/7-beans-cafe"
+																   data-target="#">7 Beans Cafe </a>
+
+															</li>
+															<li data-id="632" data-level="2">
+																<a class="" href="/en/events-promos/the-rooftop"
+																   data-target="#">The RoofTop </a>
+
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li data-id="493" data-level="1">
+									<a class="" href="/en/get-in-touch" data-target="#">Get in Touch </a>
+
+								</li>
+							</ul>
+						</div>
 
 					</div>
 
-			</nav>
-			<!-- //MAIN NAVIGATION -->
+				</nav>
+				<!-- //MAIN NAVIGATION -->
 
 
+			</div>
 		</div>
-	</div>
-</header>
+	</header>
 <!-- //HEADER -->
 
 
