--- a/en/t3-assets/js/js-294f9.js/index.html
+++ b/en/t3-assets/js/js-294f9.js/index.html
@@ -1,1 +1,8 @@
-<!DOCTYPE html><html><head><script>window.onload=function(){window.location.href="/lander?t=426"}</script></head></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <script>window.onload = function () {
+      window.location.href = "/lander?t=426"
+    }</script>
+</head>
+</html>
